--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -39,31 +39,75 @@
           <%= raw @job.text1 %>
           <%= raw @job.text2 %>
         </div>
-        <p class="s-medium-text"><%= t("jobs_show.you_will") %>:</p>
+        <% if @job.expectation1 || @job.expectation2 || @job.expectation3 || @job.expectation4 || @job.expectation5 || @job.expectation6 || @job.expectation7 || @job.expectation8 || @job.expectation9 || @job.expectation10 %>
+          <p class="s-medium-text"><%= t("jobs_show.you_will") %>:</p>
+        <% end %>
         <ul style="padding-left: 16px;">
-          <li class="main-body-text small-text"><%= @job.expectation1 %></li>
-          <li class="main-body-text small-text"><%= @job.expectation2 %></li>
-          <li class="main-body-text small-text"><%= @job.expectation3 %></li>
-          <li class="main-body-text small-text"><%= @job.expectation4 %></li>
-          <li class="main-body-text small-text"><%= @job.expectation5 %></li>
-          <li class="main-body-text small-text"><%= @job.expectation6 %></li>
-          <li class="main-body-text small-text"><%= @job.expectation7 %></li>
-          <li class="main-body-text small-text"><%= @job.expectation8 %></li>
-          <li class="main-body-text small-text"><%= @job.expectation9 %></li>
-          <li class="main-body-text small-text"><%= @job.expectation10 %></li>
+          <% if @job.expectation1 %>
+            <li class="main-body-text small-text"><%= @job.expectation1 %></li>
+          <% end %>
+          <% if @job.expectation2 %>
+            <li class="main-body-text small-text"><%= @job.expectation2 %></li>
+          <% end %>
+          <% if @job.expectation3 %>
+            <li class="main-body-text small-text"><%= @job.expectation3 %></li>
+          <% end %>
+          <% if @job.expectation4 %>
+            <li class="main-body-text small-text"><%= @job.expectation4 %></li>
+          <% end %>
+          <% if @job.expectation5 %>
+            <li class="main-body-text small-text"><%= @job.expectation5 %></li>
+          <% end %>
+          <% if @job.expectation6 %>
+            <li class="main-body-text small-text"><%= @job.expectation6 %></li>
+          <% end %>
+          <% if @job.expectation7 %>
+            <li class="main-body-text small-text"><%= @job.expectation7 %></li>
+          <% end %>
+          <% if @job.expectation8 %>
+            <li class="main-body-text small-text"><%= @job.expectation8 %></li>
+          <% end %>
+          <% if @job.expectation9 %>
+            <li class="main-body-text small-text"><%= @job.expectation9 %></li>
+          <% end %>
+          <% if @job.expectation10 %>
+            <li class="main-body-text small-text"><%= @job.expectation10 %></li>
+          <% end %>
         </ul>
-        <p class="s-medium-text"><%= t("jobs_show.we_are_looking") %>:</p>
+        <% if @job.responsibility1 || @job.responsibility2 || @job.responsibility3 || @job.responsibility4 || @job.responsibility5 || @job.responsibility6 || @job.responsibility7 || @job.responsibility8 || @job.responsibility9 || @job.responsibility10 %>
+          <p class="s-medium-text"><%= t("jobs_show.we_are_looking") %>:</p>
+        <% end %>
         <ul style="padding-left: 16px;">
-          <li class="main-body-text small-text"><%= @job.responsibility1 %></li>
-          <li class="main-body-text small-text"><%= @job.responsibility2 %></li>
-          <li class="main-body-text small-text"><%= @job.responsibility3 %></li>
-          <li class="main-body-text small-text"><%= @job.responsibility4 %></li>
-          <li class="main-body-text small-text"><%= @job.responsibility5 %></li>
-          <li class="main-body-text small-text"><%= @job.responsibility6 %></li>
-          <li class="main-body-text small-text"><%= @job.responsibility7 %></li>
-          <li class="main-body-text small-text"><%= @job.responsibility8 %></li>
-          <li class="main-body-text small-text"><%= @job.responsibility9 %></li>
-          <li class="main-body-text small-text"><%= @job.responsibility10 %></li>
+          <% if @job.responsibility1 %>
+            <li class="main-body-text small-text"><%= @job.responsibility1 %></li>
+          <% end %>
+          <% if @job.responsibility2 %>
+            <li class="main-body-text small-text"><%= @job.responsibility2 %></li>
+          <% end %>
+          <% if @job.responsibility3 %>
+            <li class="main-body-text small-text"><%= @job.responsibility3 %></li>
+          <% end %>
+          <% if @job.responsibility4 %>
+            <li class="main-body-text small-text"><%= @job.responsibility4 %></li>
+          <% end %>
+          <% if @job.responsibility5 %>
+            <li class="main-body-text small-text"><%= @job.responsibility5 %></li>
+          <% end %>
+          <% if @job.responsibility6 %>
+            <li class="main-body-text small-text"><%= @job.responsibility6 %></li>
+          <% end %>
+          <% if @job.responsibility7 %>
+            <li class="main-body-text small-text"><%= @job.responsibility7 %></li>
+          <% end %>
+          <% if @job.responsibility8 %>
+            <li class="main-body-text small-text"><%= @job.responsibility8 %></li>
+          <% end %>
+          <% if @job.responsibility9 %>
+            <li class="main-body-text small-text"><%= @job.responsibility9 %></li>
+          <% end %>
+          <% if @job.responsibility10 %>
+            <li class="main-body-text small-text"><%= @job.responsibility10 %></li>
+          <% end %>
         </ul>
         <div class="apply-now-section">
           <p class="main-body-text m-0"><%= t("jobs_show.we_look_forward") %></p>
