--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -113,7 +113,7 @@
           <p class="main-body-text m-0"><%= t("jobs_show.we_look_forward") %></p>
           <a href="mailto:jobs@foenixcoding.com" class="btn apply-now-button"><%= t("jobs_show.apply_now") %></a>
         </div>
-        <p class="main-body-text" style="font-style: italic;">Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh lacinia at. Vestibulum nec erat ut m</p>
+<!--         <p class="main-body-text" style="font-style: italic;">Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh lacinia at. Vestibulum nec erat ut m</p> -->
       </div>
     </div>
   </div>
