--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -502,7 +502,7 @@
 
   @include for-small-devices-down {
     justify-content: center;
-
+    height: 60vh;
     & img:nth-child(3) {
       width: 100px;
     }
