--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -170,7 +170,7 @@
       <%= cl_image_tag("home-slant-2_ecof1k.png", class: "home-slant-2") %>
       <div class="third-section-content" data-aos="fade-up" data-aos-duration="2000">
         <%= image_tag 'home-icon-2.png', class: 'about-icon' %>
-        <h2><%= t("home.tabs_title") %></h2>
+        <h2 style="padding: 0 10px;"><%= t("home.tabs_title") %></h2>
       </div>
       <div class="tab">
          <button class="cityTab activeTab" data-city="London" onclick="openCity('London', true)"><%= t("home.tabs_one") %></button>
