--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -264,7 +264,7 @@
       </div>
       <div class="third-video-text">
         <h3><span><%= image_tag "fxone_orange.png", alt: "Fxone Printer", class: "fxone_orange_small" %></span> Printer</h3>
-        <p>Helping businesses improve efficiency and lower production costs</p>
+        <p style="padding: 0 10px;">Helping businesses improve efficiency and lower production costs</p>
       </div>
       <div class="third-section-video">
         <%= cl_image_tag("home-outline-pill-1_o8d5ve.png", class: "home-outline-pill-1") %>
