--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -3,7 +3,7 @@
 
 <%= cl_image_tag("about-big-pill-sliced_mpxusz.png", :quality=>"auto", class: "about-big-pill") %>
 <div class="about-wrapper">
-  <div class="first-section fxone-first-section-background">
+  <div class="first-section fxone-first-section-background about-top">
     <div class="first-section-text">
       <h1 class="w-100"><%= t("about.second_section_title") %></h1>
       <p class="responsive-text"><%= t("about.second_section_text") %><br><br><%= t("about.second_section_text_two") %></p>
