--- a/app/views/pages/fxone_standard.html.erb
+++ b/app/views/pages/fxone_standard.html.erb
@@ -25,7 +25,7 @@
       <div class="row justify-content-center fxone-cards">
         <div class="col-12 col-sm-6 col-md-4 fxone-card-container">
           <div class="fxone-card">
-            <div class="d-flex">
+            <div class="d-flex align-items-start">
               <%= image_tag 'fxone-card-icon-1.png', class: 'about-icon square-card-icon' %>
               <p class="inks-card-header mt-4"><%= t("fxone_remote.first_card_title") %></p>
             </div>
@@ -34,7 +34,7 @@
         </div>
         <div class="col-12 col-sm-6 col-md-4 fxone-card-container">
           <div class="fxone-card">
-            <div class="d-flex">
+            <div class="d-flex align-items-start">
               <%= image_tag 'fxone-card-icon-2.png', class: 'about-icon square-card-icon' %>
               <p class="inks-card-header mt-4"><%= t("fxone_remote.second_card_title") %></p>
             </div>
@@ -43,7 +43,7 @@
         </div>
         <div class="col-12 col-sm-6 col-md-4 fxone-card-container">
           <div class="fxone-card">
-            <div class="d-flex">
+            <div class="d-flex align-items-start">
               <%= image_tag 'fxone-card-icon-3.png', class: 'about-icon square-card-icon' %>
               <p class="inks-card-header mt-4"><%= t("fxone_remote.third_card_title") %></p>
             </div>
@@ -52,7 +52,7 @@
         </div>
         <div class="col-12 col-sm-6 col-md-4 fxone-card-container">
           <div class="fxone-card">
-            <div class="d-flex">
+            <div class="d-flex align-items-start">
               <%= image_tag 'fxone-card-icon-4.png', class: 'about-icon square-card-icon' %>
               <p class="inks-card-header mt-4"><%= t("fxone_remote.fourth_card_title") %></p>
             </div>
@@ -61,7 +61,7 @@
         </div>
         <div class="col-12 col-sm-6 col-md-4 fxone-card-container">
           <div class="fxone-card">
-            <div class="d-flex">
+            <div class="d-flex align-items-start">
               <%= image_tag 'fxone-card-icon-5.png', class: 'about-icon square-card-icon' %>
               <p class="inks-card-header mt-4"><%= t("fxone_remote.fifth_card_title") %></p>
             </div>
@@ -70,7 +70,7 @@
         </div>
         <div class="col-12 col-sm-6 col-md-4 fxone-card-container">
           <div class="fxone-card">
-            <div class="d-flex">
+            <div class="d-flex align-items-start">
               <%= image_tag 'fxone-card-icon-6.png', class: 'about-icon square-card-icon' %>
               <p class="inks-card-header mt-4"><%= t("fxone_remote.sixth_card_title") %></p>
             </div>
@@ -79,7 +79,7 @@
         </div>
         <div class="col-12 col-sm-6 col-md-4 fxone-card-container">
           <div class="fxone-card">
-            <div class="d-flex">
+            <div class="d-flex align-items-start">
               <%= image_tag 'fxone-card-icon-7.png', class: 'about-icon square-card-icon' %>
               <p class="inks-card-header mt-4"><%= t("fxone_remote.seventh_card_title") %></p>
             </div>
@@ -88,7 +88,7 @@
         </div>
         <div class="col-12 col-sm-6 col-md-4 fxone-card-container">
           <div class="fxone-card">
-            <div class="d-flex">
+            <div class="d-flex align-items-start">
               <%= image_tag 'fxone-card-icon-8.png', class: 'about-icon square-card-icon' %>
               <p class="inks-card-header mt-4"><%= t("fxone_remote.eigth_card_title") %></p>
             </div>
@@ -97,7 +97,7 @@
         </div>
         <div class="col-12 col-sm-6 col-md-4 fxone-card-container">
           <div class="fxone-card">
-            <div class="d-flex">
+            <div class="d-flex align-items-start">
               <%= image_tag 'fxone-card-icon-9.png', class: 'about-icon square-card-icon' %>
               <p class="inks-card-header mt-4"><%= t("fxone_remote.ninth_card_title") %></p>
             </div>
@@ -106,7 +106,7 @@
         </div>
         <div class="col-12 col-sm-6 col-md-4 fxone-card-container">
           <div class="fxone-card">
-            <div class="d-flex">
+            <div class="d-flex align-items-start">
               <%= image_tag 'fxone-card-icon-10.png', class: 'about-icon square-card-icon' %>
               <p class="inks-card-header mt-4"><%= t("fxone_remote.tenth_card_title") %></p>
             </div>
@@ -115,7 +115,7 @@
         </div>
         <div class="col-12 col-sm-6 col-md-4 fxone-card-container">
           <div class="fxone-card">
-            <div class="d-flex">
+            <div class="d-flex align-items-start">
               <%= image_tag 'fxone-card-icon-11.png', class: 'about-icon square-card-icon' %>
               <p class="inks-card-header mt-4"><%= t("fxone_remote.eleventh_card_title") %></p>
             </div>
@@ -124,7 +124,7 @@
         </div>
         <div class="col-12 col-sm-6 col-md-4 fxone-card-container">
           <div class="fxone-card">
-            <div class="d-flex">
+            <div class="d-flex align-items-start">
               <%= image_tag 'fxone-card-icon-12.png', class: 'about-icon square-card-icon' %>
               <p class="inks-card-header mt-4"><%= t("fxone_remote.twelfth_card_title") %></p>
             </div>
@@ -133,7 +133,7 @@
         </div>
         <div class="col-12 col-sm-6 col-md-4 fxone-card-container">
           <div class="fxone-card">
-            <div class="d-flex">
+            <div class="d-flex align-items-start">
               <%= image_tag 'fxone-card-icon-13.png', class: 'about-icon square-card-icon' %>
               <p class="inks-card-header mt-4"><%= t("fxone_remote.thirteenth_card_title") %></p>
             </div>
