Fixed martin changes barring an icon change which is not present in the asset pipeline

--- a/app/assets/stylesheets/pages/_contact.scss
+++ b/app/assets/stylesheets/pages/_contact.scss
@@ -21,7 +21,8 @@
 
   & h1 {
     color: #0D1B26;
-    font-weight: 300;
+    // font-weight: 300;
+    font-size: 50px;
     padding-bottom: 10px;
     z-index: 2;
   }
