--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -15,7 +15,8 @@
     <div class="container">
       <div class="about-section mobile-column" style="padding-top: 0px;">
         <div class="about-second-section-left no-padding-mobile">
-          <%= cl_image_tag("about-img_gs2pe4.png", :quality=>"auto", class: "about-graphic about-graphic-two") %>
+          <%#= cl_image_tag("about-img_gs2pe4.png", :quality=>"auto", class: "about-graphic about-graphic-two") %>
+          <%= cl_image_tag("about-graphic-3_y4zb6l.png", :quality=>"auto", class: "about-graphic about-graphic-two") %>
         </div>
         <div class="about-second-section-right mobile-center" data-aos="fade-up" data-aos-duration="2000">
           <%= image_tag 'about-icon-1.png', class: 'about-icon' %>
@@ -25,7 +26,9 @@
       </div>
     </div>
   </div>
-  <div class="about-third-section-wrapper">
+
+  <!-- Martin asked for this to be removed, I've added d-none for now in case he wants any of this content back -->
+  <div class="about-third-section-wrapper d-none">
     <div class="container">
       <div class="about-third-section-text" data-aos="fade-up" data-aos-duration="2000">
         <%= image_tag 'about-icon-2.png', class: 'about-icon' %>
@@ -36,9 +39,9 @@
   </div>
   <div class="about-fourth-section-wrapper" style="background-image: url('<%= cl_image_path("about-slanted-background_towjgo.png", :quality=>"auto") %>')">
     <%#= cl_image_tag("about-slanted-background_towjgo.png", :quality=>"auto", class: "about-graphic slanted-background") %>
-    <%= cl_image_tag("about-graphic-3_y4zb6l.png", :quality=>"auto", class: "about-graphic-four") %>
+    <%= cl_image_tag("about-graphic-3_y4zb6l.png", :quality=>"auto", class: "about-graphic-four d-none") %>
     <%= image_tag 'square-dots.png', class: 'about-dots about-dots-section-three' %>
-    <div class="container">
+    <div class="container d-none">
       <div class="about-fourth">
         <div class="about-fourth-text-left">
           <p class="responsive-text"><%= t("about.fourth_section_text_left") %></p>
@@ -52,7 +55,7 @@
     <div class="about-fifth-section-wrapper">
       <%= image_tag 'square-dots.png', class: 'about-dots about-dots-section-four hide-mobile' %>
       <div class="container">
-        <div class="about-section about-fifth-section no-padding-mobile">
+        <div class="about-section about-fifth-section no-padding-mobile" style="padding-top: 0">
           <div class="about-fifth-section-left" data-aos="fade-right" data-aos-duration="2000">
             <%= cl_image_tag("about-graphic-4_r5ic34.png", :quality=>"auto", class: "about-graphic about-graphic-two hide-mobile") %>
             <%#= image_tag 'about-dots.png', class: 'about-dots-fifth' %>
