--- a/app/views/pages/software.html.erb
+++ b/app/views/pages/software.html.erb
@@ -164,7 +164,7 @@
         <%= image_tag("square-grey-dots.png", class: "software-grey-dots hide-mobile") %>
       </div>
       <div class="software-fourth-section-text">
-        <%= image_tag 'software-icon-3.png', class: 'about-icon' %>
+        <%= image_tag 'software-icon-5.jpeg', class: 'about-icon' %>
         <h2 class="text-center"><%= t("software.fourth_section_title_three") %></h2>
         <p class="responsive-text-small text-center"><%= t("software.fourth_section_text_three") %></p>
       </div>
