fixed software page

--- a/app/views/pages/software.html.erb
+++ b/app/views/pages/software.html.erb
@@ -145,7 +145,7 @@
     <%= image_tag 'about-dots.png', class: 'software-dots hide-mobile' %>
     <div class="container" style="position: relative;">
       <div class="software-fourth-section-text">
-        <%= image_tag 'software-icon-1.png', class: 'about-icon' %>
+        <%= cl_image_tag 'about-graphic-4_r5ic34.png', class: 'about-icon' %>
         <h2 class="text-center"><%= t("software.fourth_section_title_one") %></h2>
         <p class="responsive-text-small text-center"><%= t("software.fourth_section_text_one") %></p>
       </div>
