--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,7 +48,7 @@
         <div class="cookie-bar">
           <div class="cookie-bar-content d-flex justify-content-center align-items-center">
             <div class="corner"></div>
-            <p class="m-0 text-center"><%= t("cookie_bar.content") %> <span style="color: #FFB03A;"><%= t("cookie_bar.cookie_policy") %></span></p>
+            <p class="m-0 text-center"><%= t("cookie_bar.content") %> <a href="/cookie_policy" style="color: #FFB03A;"><%= t("cookie_bar.cookie_policy") %></a></p>
             <%= link_to seen_cookie_path, remote: true, class: 'cookie-close close-cookie-bar' do %>
               <%= image_tag "cookie-close.png" %>
             <% end %>
