cookie and privacy done

--- a/app/views/pages/cookie_policy.html.erb
+++ b/app/views/pages/cookie_policy.html.erb
@@ -2,7 +2,7 @@
   <%= cl_image_tag("inks_big_pill_dqob2a.png", :quality=>"auto", class: "news-pill") %>
   <%= cl_image_tag("inks_little_pill_pahv4x.png", :quality=>"auto", class: "news-pill-bottom") %>
   <div class="container" style="position: relative; z-index: 2">
-    <h1 class="responsive-header text-center">Cookie Policy for Foenix Coding</h1>
+    <h1 class="responsive-header text-center">Cookie Policy</h1>
     <p class="responsive-text-small text-center">This is the Cookie Policy for Foenix Coding, accessible from https://www.foenixcoding.com/</p>
     <br>
     <h4 class="bold mb-4">What Are Cookies</h4>
