--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -48,6 +48,8 @@
           </div>
           <div class="footer-section">
             <%= link_to t("navbar.contact"), root_path, class: 'footer-title footer-link mb16' %>
+            <%= link_to t('navbar.cookie_policy'), cookie_policy_path, class: "light-grey footer-link s-medium-text mb-2" %>
+            <%= link_to t('navbar.privacy_policy'), privacy_policy_path, class: "light-grey footer-link s-medium-text mb-2" %>
             <%#= link_to t('navbar.privacy_policy'), privacy_policy_path, class: "light-grey footer-link s-medium-text mb-2" %>
           </div>
 <!--           <div class="footer-section">
