--- a/app/views/pages/software.html.erb
+++ b/app/views/pages/software.html.erb
@@ -180,7 +180,7 @@
         </div>
       </div>
       <div class="container">
-        <div class="inks-section" style="padding-top: 80px;">
+        <div class="inks-section software-fifth-section" style="padding-top: 80px;">
           <div class="about-fifth-section-left mobile-center">
             <h2 style="padding-left: 16px;"><%= t("software.fourth_section_title_five") %></h2>
             <p class="responsive-text-small about-fifth-section-text" style="padding-left: 16px;"><%= t("software.fourth_section_text_five") %></p>
