--- a/app/assets/stylesheets/pages/_inks_and_consumables.scss
+++ b/app/assets/stylesheets/pages/_inks_and_consumables.scss
@@ -37,7 +37,7 @@
   justify-content: space-around;
   @include for-small-devices-down {
     flex-direction: column;
-    width: 100vw;
+    width: 100%;
   }
 }
 
@@ -119,6 +119,7 @@
 .jc {
   display: flex;
   justify-content: center;
+  align-items: center;
   padding: 50px 0 0 10%;
   @include for-small-devices-down {
     padding: 50px 0 0 5%;
