--- a/app/views/pages/fxone_plus.html.erb
+++ b/app/views/pages/fxone_plus.html.erb
@@ -11,7 +11,7 @@
         <h1 class="w-100"><span><%= cl_image_tag("fxone-logo_zjjdvc.png", class: "fxone-logo") %></span> <%= t("fxone_plus.first_section_title") %></h1>
         <p class="paragraph-text"><%= t("fxone_plus.first_section_text") %><br><%= t("fxone_plus.first_section_text_two") %></p>
       </div>
-      <div class="no-padding-mobile first-section-image" style="position: relative; display: flex; justify-content: center;">
+      <div class="no-padding-mobile first-section-image" style="position: relative; display: flex; justify-content: center; align-items: center">
         <%= cl_image_tag("fxone-plus_fvkcao.png", :quality=>"auto", class: "fxone-plus-graphic", style: "width: 100%; max-width: 800px;;") %>
         <div class="coming-soon" style="background-image: url('<%= cl_image_path "coming-soon-background_wjcoct.png" %>')">
           <p class="coming-soon-text"><%= t("fxone_plus.coming_soon") %></p>
