--- a/app/views/pages/fxone_remote.html.erb
+++ b/app/views/pages/fxone_remote.html.erb
@@ -25,91 +25,91 @@
         <div class="col-12 col-sm-6 col-md-4">
           <div class="fxone-card">
             <%= image_tag 'fxone-card-icon-1.png', class: 'about-icon square-card-icon' %>
-            <p class="inks-card-header"><%= t("fxone_remote.first_card_title") %></p>
+            <h6 class="inks-card-header"><%= t("fxone_remote.first_card_title") %></h6>
             <p class="paragraph-text inks-card-text"><%= t("fxone_remote.first_card_text") %></p>
           </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4">
           <div class="fxone-card">
             <%= image_tag 'fxone-card-icon-2.png', class: 'about-icon square-card-icon' %>
-            <p class="inks-card-header"><%= t("fxone_remote.second_card_title") %></p>
+            <h6 class="inks-card-header"><%= t("fxone_remote.second_card_title") %></h6>
             <p class="paragraph-text inks-card-text"><%= t("fxone_remote.second_card_text") %></p>
           </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4">
           <div class="fxone-card">
             <%= image_tag 'fxone-card-icon-3.png', class: 'about-icon square-card-icon' %>
-            <p class="inks-card-header"><%= t("fxone_remote.third_card_title") %></p>
+            <h6 class="inks-card-header"><%= t("fxone_remote.third_card_title") %></h6>
             <p class="paragraph-text inks-card-text"><%= t("fxone_remote.third_card_text") %></p>
           </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4">
           <div class="fxone-card">
             <%= image_tag 'fxone-card-icon-4.png', class: 'about-icon square-card-icon' %>
-            <p class="inks-card-header"><%= t("fxone_remote.fourth_card_title") %></p>
+            <h6 class="inks-card-header"><%= t("fxone_remote.fourth_card_title") %></h6>
             <p class="paragraph-text inks-card-text"><%= t("fxone_remote.fourth_card_text") %></p>
           </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4">
           <div class="fxone-card">
             <%= image_tag 'fxone-card-icon-5.png', class: 'about-icon square-card-icon' %>
-            <p class="inks-card-header"><%= t("fxone_remote.fifth_card_title") %></p>
+            <h6 class="inks-card-header"><%= t("fxone_remote.fifth_card_title") %></h6>
             <p class="paragraph-text inks-card-text"><%= t("fxone_remote.fifth_card_text") %></p>
           </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4">
           <div class="fxone-card">
             <%= image_tag 'fxone-card-icon-6.png', class: 'about-icon square-card-icon' %>
-            <p class="inks-card-header"><%= t("fxone_remote.sixth_card_title") %></p>
+            <h6 class="inks-card-header"><%= t("fxone_remote.sixth_card_title") %></h6>
             <p class="paragraph-text inks-card-text"><%= t("fxone_remote.sixth_card_text") %></p>
           </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4">
           <div class="fxone-card">
             <%= image_tag 'fxone-card-icon-7.png', class: 'about-icon square-card-icon' %>
-            <p class="inks-card-header"><%= t("fxone_remote.seventh_card_title") %></p>
+            <h6 class="inks-card-header"><%= t("fxone_remote.seventh_card_title") %></h6>
             <p class="paragraph-text inks-card-text"><%= t("fxone_remote.seventh_card_text") %></p>
           </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4">
           <div class="fxone-card">
             <%= image_tag 'fxone-card-icon-8.png', class: 'about-icon square-card-icon' %>
-            <p class="inks-card-header"><%= t("fxone_remote.eigth_card_title") %></p>
+            <h6 class="inks-card-header"><%= t("fxone_remote.eigth_card_title") %></h6>
             <p class="paragraph-text inks-card-text"><%= t("fxone_remote.eigth_card_text") %></p>
           </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4">
           <div class="fxone-card">
             <%= image_tag 'fxone-card-icon-9.png', class: 'about-icon square-card-icon' %>
-            <p class="inks-card-header"><%= t("fxone_remote.ninth_card_title") %></p>
+            <h6 class="inks-card-header"><%= t("fxone_remote.ninth_card_title") %></h6>
             <p class="paragraph-text inks-card-text"><%= t("fxone_remote.ninth_card_text") %></p>
           </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4">
           <div class="fxone-card">
             <%= image_tag 'fxone-card-icon-10.png', class: 'about-icon square-card-icon' %>
-            <p class="inks-card-header"><%= t("fxone_remote.tenth_card_title") %></p>
+            <h6 class="inks-card-header"><%= t("fxone_remote.tenth_card_title") %></h6>
             <p class="paragraph-text inks-card-text"><%= t("fxone_remote.tenth_card_text") %></p>
           </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4">
           <div class="fxone-card">
             <%= image_tag 'fxone-card-icon-11.png', class: 'about-icon square-card-icon' %>
-            <p class="inks-card-header"><%= t("fxone_remote.eleventh_card_title") %></p>
+            <h6 class="inks-card-header"><%= t("fxone_remote.eleventh_card_title") %></h6>
             <p class="paragraph-text inks-card-text"><%= t("fxone_remote.eleventh_card_text") %></p>
           </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4">
           <div class="fxone-card">
             <%= image_tag 'fxone-card-icon-12.png', class: 'about-icon square-card-icon' %>
-            <p class="inks-card-header"><%= t("fxone_remote.twelfth_card_title") %></p>
+            <h6 class="inks-card-header"><%= t("fxone_remote.twelfth_card_title") %></h6>
             <p class="paragraph-text inks-card-text"><%= t("fxone_remote.twelfth_card_text") %></p>
           </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4">
           <div class="fxone-card">
             <%= image_tag 'fxone-card-icon-13.png', class: 'about-icon square-card-icon' %>
-            <p class="inks-card-header"><%= t("fxone_remote.thirteenth_card_title") %></p>
+            <h6 class="inks-card-header"><%= t("fxone_remote.thirteenth_card_title") %></h6>
             <p class="paragraph-text inks-card-text"><%= t("fxone_remote.thirteenth_card_text") %></p>
           </div>
         </div>
