--- a/app/views/pages/fxone_standard.html.erb
+++ b/app/views/pages/fxone_standard.html.erb
@@ -27,7 +27,7 @@
           <div class="fxone-card">
             <div class="d-flex align-items-start">
               <%= image_tag 'fxone-card-icon-1.png', class: 'about-icon square-card-icon' %>
-              <p class="inks-card-header mt-4"><%= t("fxone_remote.first_card_title") %></p>
+              <h6 class="inks-card-header mt-4"><%= t("fxone_remote.first_card_title") %></h6>
             </div>
             <p class="paragraph-text inks-card-text mt-3"><%= t("fxone_remote.first_card_text") %></p>
           </div>
@@ -36,7 +36,7 @@
           <div class="fxone-card">
             <div class="d-flex align-items-start">
               <%= image_tag 'fxone-card-icon-2.png', class: 'about-icon square-card-icon' %>
-              <p class="inks-card-header mt-4"><%= t("fxone_remote.second_card_title") %></p>
+              <h6 class="inks-card-header mt-4"><%= t("fxone_remote.second_card_title") %></h6>
             </div>
             <p class="paragraph-text inks-card-text mt-3"><%= t("fxone_remote.second_card_text") %></p>
           </div>
@@ -45,7 +45,7 @@
           <div class="fxone-card">
             <div class="d-flex align-items-start">
               <%= image_tag 'fxone-card-icon-3.png', class: 'about-icon square-card-icon' %>
-              <p class="inks-card-header mt-4"><%= t("fxone_remote.third_card_title") %></p>
+              <h6 class="inks-card-header mt-4"><%= t("fxone_remote.third_card_title") %></h6>
             </div>
             <p class="paragraph-text inks-card-text mt-3"><%= t("fxone_remote.third_card_text") %></p>
           </div>
@@ -54,7 +54,7 @@
           <div class="fxone-card">
             <div class="d-flex align-items-start">
               <%= image_tag 'fxone-card-icon-4.png', class: 'about-icon square-card-icon' %>
-              <p class="inks-card-header mt-4"><%= t("fxone_remote.fourth_card_title") %></p>
+              <h6 class="inks-card-header mt-4"><%= t("fxone_remote.fourth_card_title") %></h6>
             </div>
             <p class="paragraph-text inks-card-text mt-3"><%= t("fxone_remote.fourth_card_text") %></p>
           </div>
@@ -63,7 +63,7 @@
           <div class="fxone-card">
             <div class="d-flex align-items-start">
               <%= image_tag 'fxone-card-icon-5.png', class: 'about-icon square-card-icon' %>
-              <p class="inks-card-header mt-4"><%= t("fxone_remote.fifth_card_title") %></p>
+              <h6 class="inks-card-header mt-4"><%= t("fxone_remote.fifth_card_title") %></h6>
             </div>
             <p class="paragraph-text inks-card-text mt-3"><%= t("fxone_remote.fifth_card_text") %></p>
           </div>
@@ -72,7 +72,7 @@
           <div class="fxone-card">
             <div class="d-flex align-items-start">
               <%= image_tag 'fxone-card-icon-6.png', class: 'about-icon square-card-icon' %>
-              <p class="inks-card-header mt-4"><%= t("fxone_remote.sixth_card_title") %></p>
+              <h6 class="inks-card-header mt-4"><%= t("fxone_remote.sixth_card_title") %></h6>
             </div>
             <p class="paragraph-text inks-card-text mt-3"><%= t("fxone_remote.sixth_card_text") %></p>
           </div>
@@ -81,7 +81,7 @@
           <div class="fxone-card">
             <div class="d-flex align-items-start">
               <%= image_tag 'fxone-card-icon-7.png', class: 'about-icon square-card-icon' %>
-              <p class="inks-card-header mt-4"><%= t("fxone_remote.seventh_card_title") %></p>
+              <h6 class="inks-card-header mt-4"><%= t("fxone_remote.seventh_card_title") %></h6>
             </div>
             <p class="paragraph-text inks-card-text mt-3"><%= t("fxone_remote.seventh_card_text") %></p>
           </div>
@@ -90,7 +90,7 @@
           <div class="fxone-card">
             <div class="d-flex align-items-start">
               <%= image_tag 'fxone-card-icon-8.png', class: 'about-icon square-card-icon' %>
-              <p class="inks-card-header mt-4"><%= t("fxone_remote.eigth_card_title") %></p>
+              <h6 class="inks-card-header mt-4"><%= t("fxone_remote.eigth_card_title") %></h6>
             </div>
             <p class="paragraph-text inks-card-text mt-3"><%= t("fxone_remote.eigth_card_text") %></p>
           </div>
@@ -99,7 +99,7 @@
           <div class="fxone-card">
             <div class="d-flex align-items-start">
               <%= image_tag 'fxone-card-icon-9.png', class: 'about-icon square-card-icon' %>
-              <p class="inks-card-header mt-4"><%= t("fxone_remote.ninth_card_title") %></p>
+              <h6 class="inks-card-header mt-4"><%= t("fxone_remote.ninth_card_title") %></h6>
             </div>
             <p class="paragraph-text inks-card-text mt-3"><%= t("fxone_remote.ninth_card_text") %></p>
           </div>
@@ -108,7 +108,7 @@
           <div class="fxone-card">
             <div class="d-flex align-items-start">
               <%= image_tag 'fxone-card-icon-10.png', class: 'about-icon square-card-icon' %>
-              <p class="inks-card-header mt-4"><%= t("fxone_remote.tenth_card_title") %></p>
+              <h6 class="inks-card-header mt-4"><%= t("fxone_remote.tenth_card_title") %></h6>
             </div>
             <p class="paragraph-text inks-card-text mt-3"><%= t("fxone_remote.tenth_card_text") %></p>
           </div>
@@ -117,7 +117,7 @@
           <div class="fxone-card">
             <div class="d-flex align-items-start">
               <%= image_tag 'fxone-card-icon-11.png', class: 'about-icon square-card-icon' %>
-              <p class="inks-card-header mt-4"><%= t("fxone_remote.eleventh_card_title") %></p>
+              <h6 class="inks-card-header mt-4"><%= t("fxone_remote.eleventh_card_title") %></h6>
             </div>
             <p class="paragraph-text inks-card-text mt-3"><%= t("fxone_remote.eleventh_card_text") %></p>
           </div>
@@ -126,7 +126,7 @@
           <div class="fxone-card">
             <div class="d-flex align-items-start">
               <%= image_tag 'fxone-card-icon-12.png', class: 'about-icon square-card-icon' %>
-              <p class="inks-card-header mt-4"><%= t("fxone_remote.twelfth_card_title") %></p>
+              <h6 class="inks-card-header mt-4"><%= t("fxone_remote.twelfth_card_title") %></h6>
             </div>
             <p class="paragraph-text inks-card-text mt-3"><%= t("fxone_remote.twelfth_card_text") %></p>
           </div>
@@ -135,7 +135,7 @@
           <div class="fxone-card">
             <div class="d-flex align-items-start">
               <%= image_tag 'fxone-card-icon-13.png', class: 'about-icon square-card-icon' %>
-              <p class="inks-card-header mt-4"><%= t("fxone_remote.thirteenth_card_title") %></p>
+              <h6 class="inks-card-header mt-4"><%= t("fxone_remote.thirteenth_card_title") %></h6>
             </div>
             <p class="paragraph-text inks-card-text mt-3"><%= t("fxone_remote.thirteenth_card_text") %></p>
           </div>
